fix: cms lifecycle events

--- a/src/docs/5.34.x/headless-cms/references/lifecycle-events.mdx
+++ b/src/docs/5.34.x/headless-cms/references/lifecycle-events.mdx
@@ -338,6 +338,7 @@ This event is triggered before a new model is stored into the database.
 
 | Property | Description                              |
 | -------- | ---------------------------------------- |
+| input    | Users raw input data                     |
 | model    | Model object which is going to be stored |
 
 #### How to subscribe to this event?
@@ -364,6 +365,7 @@ This event is triggered before a new model is stored into the database.
 
 | Property | Description                              |
 | -------- | ---------------------------------------- |
+| input    | Users raw input data                     |
 | model    | Model object which is going to be stored |
 
 #### How to subscribe to this event?
@@ -375,6 +377,31 @@ new ContextPlugin<CmsContext>(async context => {
      * For example, you want to notify another system about new model.
      */
     await notifyAnotherSystemAboutNewModel({ model });
+  });
+});
+```
+
+### onModelCreateError
+
+This event is triggered on model create error.
+
+#### Event arguments
+
+| Property | Description                    |
+| -------- | ------------------------------ |
+| input    | Users raw input data                       |
+| model    | Model object which was going to be created |
+| error    | thrown error                               |
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onModelCreateError.subscribe(async ({ model }) => {
+    /**
+     * For example, notify another system that model could not be created.
+     */
+    await notifyAnotherSystemAboutModelCreateError({ model });
   });
 });
 ```
@@ -430,6 +457,33 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
+### onModelCreateFromError
+
+This event is triggered on model create from (clone) error.
+
+#### Event arguments
+
+| Property | Description                    |
+| -------- | ------------------------------ |
+| input    | Users raw input data                       |
+| original | Model which is being cloned                |
+| model    | Model object which was going to be created |
+| error    | thrown error                               |
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onModelCreateFromError.subscribe(async ({ model }) => {
+    /**
+     * For example, notify another system that model could not be created from existing model.
+     */
+    await notifyAnotherSystemAboutModelCreateFromError({ model });
+  });
+});
+```
+
+
 ### onModelBeforeUpdate
 
 This event is triggered before a model is changed and stored into the database.
@@ -477,6 +531,33 @@ new ContextPlugin<CmsContext>(async context => {
   });
 });
 ```
+
+### onModelUpdateError
+
+This event is triggered on model update error.
+
+#### Event arguments
+
+| Property | Description                    |
+| -------- | ------------------------------ |
+| input    | Users raw input data                       |
+| original | Model which is being updated               |
+| model    | Model object which was going to be stored  |
+| error    | thrown error                               |
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onModelUpdateError.subscribe(async ({ model }) => {
+    /**
+     * For example, notify another system that model could not be updated.
+     */
+    await notifyAnotherSystemAboutModelUpdateError({ model });
+  });
+});
+```
+
 
 ### onModelBeforeDelete
 
@@ -533,6 +614,7 @@ This event is triggered on model delete error.
 | Property | Description                    |
 | -------- | ------------------------------ |
 | Model    | Model object which was going to be deleted |
+| error    | thrown error                               |
 
 #### How to subscribe to this event?
 
@@ -617,6 +699,33 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
+### onEntryCreateError
+
+This event is triggered on entry create error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| input    | Raw user input                |
+| entry    | Entry object which was going to be stored |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryCreateError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about new entry.
+     */
+    await notifyAnotherSystemAboutCreateError({ model, entry, error });
+  });
+});
+```
+
 ### onEntryRevisionBeforeCreate
 
 This event is triggered before a new entry is created from originating entry and is stored into the database.
@@ -678,6 +787,34 @@ new ContextPlugin<CmsContext>(async context => {
      * For example, notify another system about new entry.
      */
     await notifyAnotherSystemAboutNewEntryRevision({ model, entry });
+  });
+});
+```
+
+### onEntryCreateFromError
+
+This event is triggered on entry create from error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| input    | Raw user input                |
+| original | Original entry                |
+| entry    | Entry object which was going to be stored |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryCreateFromError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about create from.
+     */
+    await notifyAnotherSystemAboutCreateFromError({ model, entry, error });
   });
 });
 ```
@@ -747,6 +884,35 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
+### onEntryUpdateError
+
+This event is triggered on entry update error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| input    | Raw user input                |
+| original | Original entry                |
+| entry    | Entry object which was going to be stored |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryUpdateError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about update error.
+     */
+    await notifyAnotherSystemAboutUpdateError({ model, entry, error });
+  });
+});
+```
+
+
 ### onEntryBeforeDelete
 
 This event is triggered before all entry revisions are deleted from the database.
@@ -794,6 +960,32 @@ new ContextPlugin<CmsContext>(async context => {
      * For example, notify another system about deleted entry.
      */
     await notifyAnotherSystemAboutDeletedEntry({ model, entry });
+  });
+});
+```
+
+### onEntryDeleteError
+
+This event is triggered on entry delete error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| entry    | Entry object which was going to be deleted |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryDeleteError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about delete error.
+     */
+    await notifyAnotherSystemAboutDeleteError({ model, entry, error });
   });
 });
 ```
@@ -849,6 +1041,32 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
+### onEntryRevisionDeleteError
+
+This event is triggered on entry delete error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| entry    | Entry revision which was going to be deleted |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryRevisionDeleteError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about revision delete error.
+     */
+    await notifyAnotherSystemAboutRevisionDeleteError({ model, entry, error });
+  });
+});
+```
+
 ### onEntryBeforePublish
 
 This event is triggered before an entry is published.
@@ -900,6 +1118,33 @@ new ContextPlugin<CmsContext>(async context => {
 });
 ```
 
+### onEntryPublishError
+
+This event is triggered on entry publishing error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| entry    | Entry revision which was going to be published |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryPublishError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about publishing error.
+     */
+    await notifyAnotherSystemAboutPublishError({ model, entry, error });
+  });
+});
+```
+
+
 ### onEntryBeforeUnpublish
 
 This event is triggered before an entry is unpublished.
@@ -947,6 +1192,32 @@ new ContextPlugin<CmsContext>(async context => {
      * For example, notify another system about unpublished entry.
      */
     await notifyAnotherSystemAboutUnpublishedEntry({ model, entry });
+  });
+});
+```
+
+### onEntryUnpublishError
+
+This event is triggered on entry unpublishing error.
+
+#### Event arguments
+
+| Property | Description                   |
+| -------- | ----------------------------- |
+| entry    | Entry revision which was going to be unpublished |
+| model    | Model this entry belongs to   |
+| error    | thrown error                  |
+
+
+#### How to subscribe to this event?
+
+```typescript
+new ContextPlugin<CmsContext>(async context => {
+  context.cms.onEntryUnpublishError.subscribe(async ({ model, entry, error }) => {
+    /**
+     * For example, notify another system about unpublishing error.
+     */
+    await notifyAnotherSystemAboutUnpublishError({ model, entry, error });
   });
 });
 ```
