feat: update lifecycle events for headless cms (#510)

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -53,6 +53,8 @@ Our only recommendation is not to filter really deeply nested objects in the Dyn
 
 ✏️
 
+## System Wide
+
 ### Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
 
 Because there were some inconsistencies in the naming of the lifecycle events throughout the system, we changed those to be same everywhere.
