fix: advanced filtering text changes

--- a/src/docs/5.34.x/headless-cms/basics/using-graphql-api-advanced-filtering.mdx
+++ b/src/docs/5.34.x/headless-cms/basics/using-graphql-api-advanced-filtering.mdx
@@ -239,7 +239,7 @@ query {
 
 This query will produce something like `((title_contains = "headless" AND categoryId = 1) OR title_contains = "cms")`.
 
-As you can notice, having more than one filter in an `OR` block produces the match all required in that `OR` block.
+As you can notice, having more than one filter in an `OR` block produces the **match all** in that `OR` block.
 
 We will cover the mixed `AND` and `OR` conditionals later in this article.
 
@@ -283,8 +283,6 @@ query {
 ```
 
 This query will produce something like `(title_contains = "headless" OR title_contains = "cms" OR (categoryId = 1 OR categoryId = 2))`.
-
-You can notice that we could have actually written the query without the nested `OR` conditional, but to have an example we did it like this.
 
 ## The Mix of `AND` and `OR` Conditionals
 
@@ -424,7 +422,7 @@ query {
 
 This query will produce something like `((author = 1 OR categoryId = 2) AND (title_contains = "headless" AND title_contains = "cms"))`.
 
-<Alert type="info">
+<Alert type="warning">
 
 While users can nest `AND` and `OR` conditionals indefinitely, they need to be aware that it might result in performance issues, especially in the DynamoDB only systems.
 
