refactor: filtering file field

--- a/src/docs/5.34.x/headless-cms/basics/using-graphql-api-filtering.mdx
+++ b/src/docs/5.34.x/headless-cms/basics/using-graphql-api-filtering.mdx
@@ -178,7 +178,7 @@ The `RichText` field has no filters. This is due to the `RichText` field being a
 
 ### The File Field
 
-The `File` field has no filters. This is due to the `File` field being a JSON object.
+The `File` field has no filters.
 
 ### The Reference Field
 
