--- a/src/docs/5.34.x/headless-cms/basics/using-graphql-api-filtering.mdx
+++ b/src/docs/5.34.x/headless-cms/basics/using-graphql-api-filtering.mdx
@@ -25,7 +25,7 @@ When filtering by equal value, there is no `eq` or `equal` or anything similar, 
 
 </Alert>
 
-## Available Built-In Fields Filtering
+## Simple Field Filtering
 
 ### The Boolean Field
 
