feat: add support for {exact:version} placeholder

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -43,7 +43,7 @@ Our only recommendation is not to filter really deeply nested objects in the Dyn
 
 With this release, we've introduced a small but neat feature called _application aliases_.
 
-Application aliases make it a bit easier to run often used [Webiny CLI](/docs/5.34.x/core-development-concepts/basics/webiny-cli) commands. For example, upon running the [`webiny deploy`](/docs/5.34.x/core-development-concepts/basics/project-deployment) command, instead of typing the full path of the application, for example `apps/admin`, you can now just type `admin`:
+Application aliases make it a bit easier to run often used [Webiny CLI](/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli) commands. For example, upon running the [`webiny deploy`](/docs/{exact:5.34.x}/core-development-concepts/basics/project-deployment) command, instead of typing the full path of the application, for example `apps/admin`, you can now just type `admin`:
 
 ```bash
 # Using full path of the application:
@@ -57,11 +57,11 @@ The application aliases can be used with all project applications (**Core**, **A
 
 <Alert type="info" title="Project Applications">
 
-  Learn more about project applications and project organization in general, in the [Project Applications and Packages](/docs/5.34.x/core-development-concepts/project-organization/project-applications) key topic.
+  Learn more about project applications and project organization in general, in the [Project Applications and Packages](/docs/{exact:5.34.x}/core-development-concepts/project-organization/project-applications) key topic.
 
 </Alert>
 
-For more information about this new feature, please visit the [Application Aliases](#) section of the existing [Webiny CLI](/docs/5.34.x/core-development-concepts/basics/webiny-cli) article.
+For more information about this new feature, please visit the [Application Aliases](#) section of the existing [Webiny CLI](/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli) article.
 
 
 ### Feature Flags ([#2897](https://github.com/webiny/webiny-js/pull/2897))
@@ -133,7 +133,7 @@ export default {
 
 Note that the `WEBINY_` prefixed variables will be available in your backend (AWS Lambda) application code, and the `REACT_APP_` prefixed ones in your frontend (React) application code.
 
-For more information about this new feature, please visit the updated [Environment Variables](/docs/5.34.x/core-development-concepts/basics/environment-variables) article.
+For more information about this new feature, please visit the updated [Environment Variables](/docs/{exact:5.34.x}/core-development-concepts/basics/environment-variables) article.
 
 ### Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
 
