fix: customizing the error output

--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
@@ -14,7 +14,7 @@ import { Alert } from "@/components/Alert";
 
 ## Introduction
 
-In 5.34.0 version of the Webiny we added a possibility for users to modify our `Fastify` handler instance, via the `ModifyFastifyPlugin`. To find our more on how and why we use `Fastify`, please read this [article](../basics/routes-and-events).
+In 5.34.0 version of the Webiny we added a possibility for users to modify our `Fastify` handler instance, via the `ModifyFastifyPlugin`. To find our more on how and why we use `Fastify`, please read this [article](/docs/core-development-concepts/basics/routes-and-events).
 
 With the given plugin user can change and add anything to the `Fastify` instance, including the error handler.
 
@@ -84,15 +84,5 @@ export const handler = createHandler({
 <Alert type="warning" title="Why only the graphql handler example?">
 
 Users **MUST** register the plugin in both GraphQL (`apps/api/graphql/src/index.ts`) and HeadlessCMS (`apps/api/headlessCMS/src/index.ts`) Lambda handlers.
-
-</Alert>
-
-
-## Adding a Route to the API Gateway
-
-
-<Alert type="info" title="Why only the graphql handler example?">
-
-We will eventually remove the headlessCMS Lambda and its handler, so do not add routes there. Everything you might need from the system is available in the GraphQL Lambda handler.
 
 </Alert>
