fix: customizing the error output

--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
@@ -81,7 +81,7 @@ export const handler = createHandler({
 });
 ```
 
-<Alert type="warning" title="Why only the graphql handler example?">
+<Alert type="warning">
 
 Users **MUST** register the plugin in both GraphQL (`apps/api/graphql/src/index.ts`) and HeadlessCMS (`apps/api/headlessCMS/src/index.ts`) Lambda handlers.
 
