fix: customizing the error output

--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
@@ -24,7 +24,7 @@ We have our built-in error handler, but if it does not suit the user, they can c
 
 There is a plugin class, `ModifyFastifyPlugin`, which user can construct, or they can use a function which in turn constructs the plugin from the `ModifyFastifyPlugin` class.
 
-### Create a Custom Handler Via the `ModifyFastifyPlugin` Class
+## Example: Create a Custom Handler Via Class
 
 ```typescript
 import { ModifyFastifyPlugin } from "@webiny/handler";
@@ -37,16 +37,14 @@ const plugin = new ModifyFastifyPlugin((instance) => {
                 "Cache-Control": "no-store"
             })
             .send({
-                myCustomErrorClassHandler: true,
-                message: error.message,
-                code: error.code,
-                data: error.data
+                ...error,
+                myCustomErrorClassHandler: true
             });
     });
 });
 ```
 
-### Create a Custom Handler Via the `createModifyFastifyPlugin` Function
+## Example: Create a Custom Handler Via Function
 
 ```typescript
 import { createModifyFastifyPlugin } from "@webiny/handler";
@@ -59,16 +57,14 @@ const plugin = createModifyFastifyPlugin((instance) => {
                 "Cache-Control": "no-store"
             })
             .send({
-                myCustomErrorFunctionHandler: true,
-                message: error.message,
-                code: error.code,
-                data: error.data
+                ...error,
+                myCustomErrorFunctionHandler: true
             });
     });
 });
 ```
 
-### Registering the Plugin
+## Registering the Plugin
 
 In both cases of creating the Fastify modifier plugin, users need to register the plugin the same location.
 
