fix: make shared articles build

--- a/src/docs/shared/webiny-telemetry/webiny-telemetry.mdx
+++ b/src/docs/shared/webiny-telemetry/webiny-telemetry.mdx
@@ -1,8 +1,8 @@
 ---
 title: Webiny Telemetry
+description: Learn about Webiny telemetry
 ---
 
-## Our Products
 
 Webiny CMS is a self-hosted product that runs in the customer’s own cloud infrastructure. Data that is generated and created by the product is processed and stored with the cloud provider.
 
