wip: create changelog

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -6,9 +6,38 @@ description: See what's new in Webiny version 5.34.0.
 
 ## Page Builder
 
-### New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
+### Page Elements: A Brand New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
 
-✏️
+With this release, we are introducing a brand new page rendering engine called **Page Elements**!
+
+With it, we've made a complete overhaul of the way pages created with Webiny's Page Builder application are being rendered.
+
+The results are:
+
+- a drastic reduction of more than **80%** 🚀 of the total amount of HTML and CSS that is shipped to your website's visitors
+- significant improvements in both objective and perceived performance of your website
+- better SEO
+
+When it comes to development, the new rendering engine also brought the following:
+
+- easier development of custom page elements
+- minimized the chance of having visual differences when comparing a page rendered in the Page Builder's page editor and on the actual public website
+- drastically simplified the application code located in **Website** (`apps/website`) and **Theme** (`apps/theme`) folders
+
+<Alert type="info" title={"Backwards Compatibility"}>
+
+  For new Webiny projects, the new rendering engine will be enabled by default. No extra steps needed.
+
+  For existing projects, users have the option to migrate to the new rendering engine over time, once it's convenient
+  for them. Until then, their projects will still use the now *legacy* rendering engine, which we plan to support until the end of June 2022. After that, the legacy rendering engine will be considered deprecated and will receive no further support.
+
+</Alert>
+
+### Rendering Pages In External (non-Webiny) Projects
+
+One of the long-awaited features we've also introduced in this release is the ability to render pages created with Webiny's Page Builder application in external (non-Webiny) projects. For example, you can now render pages in a standalone [Next.js](https://nextjs.org/) application, with just a couple of initial setup steps.
+
+Be sure to check out the related documentation to learn more.
 
 ## Mailer
 
