feat: customizing the error output note

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -176,3 +176,12 @@ All the lifecycle events follow, which use publish / subscribe pattern, now look
 - `onPageUpdateError` - note that this is a bit different, but there is no `before` or `after` when handling an error
 
 All old lifecycle events work, but they are deprecated and will be removed in, probably, `5.36.0` version of Webiny,
+
+
+### Customizing the Error Output ([#2943](https://github.com/webiny/webiny-js/pull/2943))
+
+Until now, when some code error happened (for example: reading property of null value), users got the `500` error code with the `Internal Server Error` message.
+
+By default, we now output the error `message`, `code` and `data` properties in the response, but users can modify that if they want to.
+
+To find out how to add your own error handler, please read this [article](/docs/core-development-concepts/extending-and-customizing/customizing-the-error-output).
