chore: hide user guides, add upgrade instructions

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -13,6 +13,12 @@ import deployDiff from "./assets/pulumi-diff.png";
 
 ## Page Builder
 
+### Blocks Manager
+
+This is another powerful feature to streamline creation of your pages, and make the life of your content creators enjoyable. Blocks Manager allows you to build content blocks and reuse them across your pages. Updating blocks will automatically reflect on all page that use those blocks. We'll cover this new feature in details in the very near future, where you'll learn about everything it can do.
+
+<Image src={blockManager} title={"Blocks Manager"} />
+
 ### Page Elements: A Brand New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
 
 With this release, we are introducing a brand new page rendering engine called **Page Elements**!
@@ -45,12 +51,6 @@ for them. Until then, their projects will still use the now _legacy_ rendering e
 One of the long-awaited features we've also introduced in this release is the ability to render pages created with Webiny's Page Builder application in external (non-Webiny) projects. For example, you can now render pages in a standalone [Next.js](https://nextjs.org/) application, with just a couple of initial setup steps.
 
 Be sure to check out the related documentation to learn more.
-
-### Blocks Manager
-
-This is another powerful feature to streamline creation of your pages, and make the life of your content creators enjoyable. Blocks Manager allows you to build content blocks and reuse them across your pages. Updating blocks will automatically reflect on all page that use those blocks. We'll cover this new feature in details in the very near future, where you'll learn about everything it can do.
-
-<Image src={blockManager} title={"Blocks Manager"} />
 
 ## Mailer
 
@@ -88,6 +88,12 @@ To find out more about the advanced filtering, read this [article](/docs/headles
 We added a possibility to filter entries by values in the nested object field. It doesn't matter if it's a multiple values object or a single value one, or how deep the data is nested.
 
 Our only recommendation is not to filter really deeply nested objects in the DynamoDB only systems, as it will get slow.
+
+### Headless CMS Plugins Removed From the Admin App
+
+With this release, we're removing all the default Headless CMS plugins, located in the Admin app, from users' projects. These plugins are still loaded, but that's happening internally. The project upgrade script will take care of removing those default plugins from your source code, and all other plugins will remain intact.
+
+The overall philosophy we've adopted over the time is hiding as much boilerplate as possible from users, to make it easier to maintain and ship upgrades in the long run. Since it's impossible to do all at once, you'll see these small cleanup upgrades performed every quarter. At some point there will be no more boilerplate left, and all you'll have in your project are your custom plugins.
 
 ## Development
 
@@ -207,12 +213,11 @@ To find out how to add your own error handler, please read [this article](/docs/
 
 ### Infrastructure Deploy Preview
 
-Very often we need to see what changes will happen upon infrastructure deployment. Webiny does have a `--preview` flag, but it would only tell you that _something_ will change on the resource, but not what values exactly are being changed. 
+Very often we need to see what changes will happen upon infrastructure deployment. Webiny does have a `--preview` flag, but it would only tell you that _something_ will change on the resource, but not what values exactly are being changed.
 
 With this release, we've enabled a proper diff output, so you will know exactly what values are being changed:
 
 <Image src={deployDiff} title={"Deploy Preview with Diff"} />
-
 
 ### React Forms Generics
 
