fix: improve wording

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -15,7 +15,7 @@ import deployDiff from "./assets/pulumi-diff.png";
 
 ### Blocks Manager
 
-This is another powerful feature to streamline creation of your pages, and make the life of your content creators enjoyable. Blocks Manager allows you to build content blocks and reuse them across your pages. Updating blocks will automatically reflect on all page that use those blocks. We'll cover this new feature in details in the very near future, where you'll learn about everything it can do.
+This is a powerful feature to streamline creation of your pages, and save a lot of timefor your content creators. Blocks Manager allows you to build content blocks and reuse them across your pages. Updating blocks will automatically reflect on all pages that use those blocks. We'll cover this new feature in details in the very near future, where you'll learn about everything it can do.
 
 <Image src={blockManager} title={"Blocks Manager"} />
 
